[package]
name = "yamutil"
version = "0.1.0"
description = "Yammer utility"
authors = ["asm"]
edition = "2021"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0"
clap = { version = "4", features = ["derive"] }
dotenv = "0"
futures = "0"
html-entities = "0"
humantime = "2"
lazy_static = "1"
log = "0"
mime = "0"
rand = "0"
reqwest_cookie_store = "0"
rpassword = "7"
rustmix = { git = "https://github.com/asm2025/rustmix.git", tag = "0.3.0" }
scraper = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
once_cell = "1"
url = { version = "2", features = ["serde"] }
urlencoding = "2"

[profile.dist]
inherits = "release"
lto = "thin"

[profile.release]
lto = true
opt-level = 3
debug = false
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3

[package.metadata.scripts]
run = "cargo run"
check = "cargo check"
build = "cargo build"
release = "cargo build --release"
features = "cargo feature %1"
chrono = "0"
clap = { version = "4", features = ["derive"] }
dotenv = "0"
futures = "0"
